@@ -15,11 +15,12 @@ jalv (1.6.7) unstable; urgency=medium
   * Fix spurious transport messages
   * Flush stdout after printing control values in console interface
   * Print status information consistently to stdout
+  * Propagate worker errors to the scheduler when possible
   * Remove Gtkmm interface
   * Remove Qt4 support
   * Switch to meson build system
 
- -- David Robillard <d@drobilla.net>  Wed, 10 Aug 2022 16:17:35 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 10 Aug 2022 16:51:40 +0000
 
 jalv (1.6.6) stable; urgency=medium
 
